# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//media/media_options.gni")

component("parsers") {
  sources = [
    "jpeg_parser.cc",
    "jpeg_parser.h",
    "media_parsers_export.h",
    "vp8_bool_decoder.cc",
    "vp8_bool_decoder.h",
    "vp8_parser.cc",
    "vp8_parser.h",
    "webp_parser.cc",
    "webp_parser.h",
  ]
  defines = [ "IS_MEDIA_PARSER_IMPL" ]
  deps = [ "//base" ]

  # This target is used in GPU IPC code and cannot depend on any //media code.
  assert_no_deps = [
    "//media",
    "//media:shared_memory_support",
  ]
}
